# faster_chars_count

./: .gitignore  Cargo.toml  LICENSE  README.md  search-index.js  settings.html  source-files.js
.github/workflows/: rust.yml
benches/: bench.rs
faster_chars_count/: Cargo.toml  all.html  fn.chars_count_byte.html  fn.chars_count_str.html  index.html  sidebar-items.js  trait.CharsCount.html
faster_chars_count/src/: lib.rs
implementors/faster_chars_count/: trait.CharsCount.js
peformance/benches/: bench.rs
peformance/benches/src/: lib.rs
peformance/src/: lib.rs  main.rs
src/: lib.rs  main.rs
src/faster_chars_count/: lib.rs.html
