[package]
name = "faster-chars-count"
version = "0.1.7"
authors = ["aobatact <aobatact144@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Library for counting length of chars faster than Chars::count()"
repository = "https://github.com/aobatact/faster_chars_count"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

