[package]
name = "faster-chars-count"
version = "0.2.1"
authors = ["aobatact <aobatact144@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Library for counting length of chars faster than Chars::count()"
repository = "https://github.com/aobatact/faster_chars_count"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["runtime_detect"]
std = []
runtime_detect = [ "std" ]

[dependencies]

