[package]
name = "faster-chars-count"
version = "0.3.0"
authors = ["aobatact <aobatact144@gmail.com>"]
edition = "2021"
license = "MIT"
description = "Library for counting length of chars faster than Chars::count()"
repository = "https://github.com/aobatact/faster_chars_count"
rust-version = "1.56"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["runtime_detect"]
std = []
runtime_detect = [ "std" ]

[dependencies]

